--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "notistack": "^3.0.1",
     "react": "^18",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
